--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "inflector"]
 	path = inflector
-	url = https://github.com/LFalch/inflector
+	url = https://github.com/mtib/inflector.git
